Alligned sidebar to the right and prevented overflow

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     --sidebar-background-color: #212A3E;
     --content-background-color: #DDE6ED;
     --projects-background-color: #fcfeff;
-    background-color: #ffffff;
+    background-color: #DDE6ED;
 }
 
 @font-face {
@@ -21,9 +21,9 @@ body {
 .main-container {
     display: grid;
     grid-template-areas:
-        "sidebar header header header"
-        "sidebar content content announcements"
-        "sidebar content content activities"
+        "sidebar header header header header header"
+        "sidebar content content content content rightbar"
+        "sidebar content content content content rightbar"
     ;
 
     height: 100vh;
@@ -93,28 +93,45 @@ div.projects>* {
     padding: 10px;
 }
 
+.right-side-bar {
+    grid-area: rightbar;
+    display: flex;
+    flex-direction: column;
+    /* align-items: end; */
+    /* background-color: rgb(255, 182, 182); */
+    justify-content:start;
+    width: 230px;
+    overflow: auto;
+    /* align-self: bottom; */
+}
+
 .announcements {
     background-color: var(--header-background-color);
-    grid-area: announcements;
+    /* grid-area: announcements; */
     box-shadow: 0px 3px 4px #3630623f;
     padding: 1rem;
     margin: 1rem;
-    width: clamp(100px, 50%, 300px);
+    /* width: clamp(100px, 50%, 300px); */
+    border-radius: 10px;
+    overflow: auto;
+}
+
+
+.activities {
+    background-color: var(--header-background-color);
+    /* grid-area: activities; */
+    box-shadow: 0px 3px 4px #3630623f;
+    padding: 1rem;
+    margin: 1rem;
+    /* width: clamp(100px, 50%, 300px); */
+    border-radius: 10px;
+    overflow: auto;
 }
 
 .right-content-title {
     display: flex;
     align-items: center;
     gap: .5rem;
-}
-
-.activities {
-    background-color: var(--header-background-color);
-    grid-area: activities;
-    box-shadow: 0px 3px 4px #3630623f;
-    padding: 1rem;
-    margin: 1rem;
-    width: clamp(100px, 50%, 300px);
 }
 
 /* adding shadows */
